# internal/model/swagger.go
@@ -21,3 +21,14 @@ type ContestSwagger struct {
 	CreatedBy string    `json:"createdBy" description:"Username who created the contest"`
 	UpdatedBy string    `json:"updatedBy" description:"Username who last updated the contest"`
 }
+
+
+type PaginatedContestResponseSwagger struct {
+	Contests   []ContestSwagger `json:"contests"`
+	Page       int              `json:"page"`
+	Limit      int              `json:"limit"`
+	Total      int64            `json:"total"`
+	TotalPages int              `json:"totalPages"`
+	HasNext    bool             `json:"hasNext"`
+	HasPrev    bool             `json:"hasPrev"`
+}
